2008-12-20  Janne Jalkanen <jalkanen@apache.org>

        * 3.0.0-svn-35
        
        * First step in refactoring WikiPage into an interface.  The WikiPage
        constructors are now deprecated, and most of the code now uses 
        WikiEngine.createPage().
        
        * Also created a WikiContextFactory.newViewContext(WikiPage) to get rid
        of all the null arguments.

2008-12-19  Andrew Jaquith <ajaquith AT apache DOT org>

        * 3.0.0-svn-34
        
        * Migrated UserPreferences.jsp and related; completely overhauled Preferences
        code so that it is much simpler, and leverages Stripes. UserPreferences.jsp and
        the collaborating UserPreferencesActionBean, in particular, are excellent
        examples of what the JSPs will look like when we are done migrating everything.
        A few bugs remain. Removed jspwiki & stripes TLDs from WEB-INF; they are
        both in their respective jars' META-INF directories now.

2008-12-19 Harry Metske <metskem@apache.org>

        * 3.0.0-svn-33
        
        * JSPWIKI-451 Russian translation, thanks to Andrew Rikhlivsky

2008-12-17  Andrew Jaquith <ajaquith AT apache DOT org>

        * 3.0.0-svn-32
        
        * Further refinements to Stripes-related JSPs. Refactoring of Login/Profile/View
        ActionBeans. Introduction of Stripes layout system, which makes templating
        somewhat easier (but at the moment all Stripes JSPs are  hardwired to 'default'). 
        
2008-12-11 Harry Metske <metskem@apache.org>

        * 3.0.0-svn-31
        
        * JSPWIKI-451 Fix the copyright templates on all test cases
        
2008-12-06  Andrew Jaquith <ajaquith AT apache DOT org>

        * 3.0.0-svn-29

        * Lots of work on user preferences/profile JSPs and ActionBeans; LostPassword.jsp
        has been assimilated into LoginActionBean. <rubs hands gleefully> Muhuhahaha!

2008-12-06  Andrew Jaquith <ajaquith AT apache DOT org>

        * 3.0.0-svn-29
